[gd_scene load_steps=12 format=3 uid="uid://cfs031sdlevg6"]

[ext_resource type="Script" uid="uid://ygtcoguut68n" path="res://Scripts/car_shop.gd" id="1_e8ucp"]
[ext_resource type="Texture2D" uid="uid://cq1syb7b1h1on" path="res://Assets/ShopBG.png" id="1_krss7"]
[ext_resource type="FontFile" uid="uid://dkjky1udawmw0" path="res://Assets/ARCADECLASSIC.TTF" id="2_e8ucp"]
[ext_resource type="Texture2D" uid="uid://bkem036u7ripw" path="res://Assets/Border.png" id="3_xjw1y"]
[ext_resource type="Texture2D" uid="uid://1apx2ds2lm2g" path="res://Assets/Girl.png" id="4_krss7"]
[ext_resource type="Texture2D" uid="uid://csf8uajc1xp88" path="res://Assets/Parrot_Portrait.png" id="5_e8ucp"]
[ext_resource type="Texture2D" uid="uid://c61rm7noht2rf" path="res://Assets/Stick_Shift.png" id="6_xjw1y"]
[ext_resource type="Texture2D" uid="uid://bwi4gtyljvpmb" path="res://Assets/Car_Upgrade_Portrait.png" id="7_b2jp6"]
[ext_resource type="Texture2D" uid="uid://5khtdjtlx1dt" path="res://Assets/Oil_Portrait.png" id="8_igo68"]
[ext_resource type="AudioStream" uid="uid://2dewmbrm1us6" path="res://Assets/button-press-3-386171_69xd9Yn0.mp3" id="9_b75en"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2pcd"]
size = Vector2(839.28, 144.22)

[node name="CarShop" type="Node2D"]
script = ExtResource("1_e8ucp")

[node name="ShopBg" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(425.5, 425.5)
scale = Vector2(3.32422, 3.32422)
texture = ExtResource("1_krss7")

[node name="Shop" type="Label" parent="."]
offset_left = 260.0
offset_top = 1.0
offset_right = 579.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 64
text = "SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item1" type="ColorRect" parent="."]
offset_left = 5.0
offset_top = 115.0
offset_right = 844.0
offset_bottom = 259.0
scale = Vector2(0.966304, 0.825131)
color = Color(0.662745, 0.631373, 0.678431, 1)

[node name="Border" type="Sprite2D" parent="Item1"]
z_index = 1
texture_filter = 1
position = Vector2(77.6153, 71.5039)
scale = Vector2(9, 9)
texture = ExtResource("3_xjw1y")

[node name="Girl" type="Sprite2D" parent="Item1/Border"]
texture_filter = 1
position = Vector2(-0.575, -0.943)
scale = Vector2(0.556, 0.5)
texture = ExtResource("4_krss7")

[node name="Label2" type="Label" parent="Item1"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 167.0
offset_top = 17.0
offset_right = 610.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "Traffic  Girl
Pushes the button for you 
every 5 seconds"

[node name="Area2D" type="Area2D" parent="Item1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item1/Area2D"]
position = Vector2(419.25, 72.1098)
shape = SubResource("RectangleShape2D_k2pcd")

[node name="Button" type="Button" parent="Item1"]
texture_filter = 1
layout_mode = 0
offset_left = 645.76
offset_top = 4.84772
offset_right = 833.76
offset_bottom = 137.848
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "BUY
10"

[node name="Item2" type="ColorRect" parent="."]
offset_left = 7.0
offset_top = 263.0
offset_right = 846.0
offset_bottom = 407.0
scale = Vector2(0.966304, 0.825131)
color = Color(0.662745, 0.631373, 0.678431, 1)

[node name="Border" type="Sprite2D" parent="Item2"]
z_index = 1
texture_filter = 1
position = Vector2(77.6153, 71.5039)
scale = Vector2(9, 9)
texture = ExtResource("3_xjw1y")

[node name="ParrotPortrait" type="Sprite2D" parent="Item2/Border"]
texture_filter = 1
position = Vector2(-0.69, 0.135)
scale = Vector2(0.402, 0.431)
texture = ExtResource("5_e8ucp")

[node name="Label2" type="Label" parent="Item2"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 166.614
offset_top = 16.967
offset_right = 342.614
offset_bottom = 81.967
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "Pet
increases number of kills
per hit"

[node name="Area2D" type="Area2D" parent="Item2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item2/Area2D"]
position = Vector2(421.193, 76.3515)
shape = SubResource("RectangleShape2D_k2pcd")

[node name="Button" type="Button" parent="Item2"]
texture_filter = 1
layout_mode = 0
offset_left = 644.0
offset_top = 8.0
offset_right = 833.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "BUY
10"

[node name="Item3" type="ColorRect" parent="."]
offset_left = 7.0
offset_top = 413.0
offset_right = 846.0
offset_bottom = 557.0
scale = Vector2(0.966304, 0.825131)
color = Color(0.662745, 0.631373, 0.678431, 1)

[node name="Border" type="Sprite2D" parent="Item3"]
z_index = 1
texture_filter = 1
position = Vector2(77.6153, 71.5039)
scale = Vector2(9, 9)
texture = ExtResource("3_xjw1y")

[node name="StickShift" type="Sprite2D" parent="Item3/Border"]
texture_filter = 1
position = Vector2(2.92808e-06, 0.134648)
scale = Vector2(0.402, 0.45)
texture = ExtResource("6_xjw1y")

[node name="Label2" type="Label" parent="Item3"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 166.614
offset_top = 16.967
offset_right = 342.614
offset_bottom = 81.967
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "Stick    Shift
increases the speed of 
vehicle"

[node name="Area2D" type="Area2D" parent="Item3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item3/Area2D"]
position = Vector2(419.64, 72.1098)
shape = SubResource("RectangleShape2D_k2pcd")

[node name="Button" type="Button" parent="Item3"]
texture_filter = 1
layout_mode = 0
offset_left = 644.0
offset_top = 4.0
offset_right = 834.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "BUY 
10"

[node name="Item4" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 557.0
offset_right = 847.0
offset_bottom = 701.0
scale = Vector2(0.966304, 0.825131)
color = Color(0.662745, 0.631373, 0.678431, 1)

[node name="Border" type="Sprite2D" parent="Item4"]
z_index = 1
texture_filter = 1
position = Vector2(77.6153, 71.5039)
scale = Vector2(9, 9)
texture = ExtResource("3_xjw1y")

[node name="CarUpgradePortrait" type="Sprite2D" parent="Item4/Border"]
position = Vector2(-0.229969, -0.269329)
scale = Vector2(0.438, 0.471)
texture = ExtResource("7_b2jp6")

[node name="Label2" type="Label" parent="Item4"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 166.614
offset_top = 10.9074
offset_right = 464.614
offset_bottom = 137.907
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "Tank   and   truck
La rger    Size,
appears   at a  chance"

[node name="Area2D" type="Area2D" parent="Item4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item4/Area2D"]
position = Vector2(419.64, 72.1098)
shape = SubResource("RectangleShape2D_k2pcd")

[node name="Button" type="Button" parent="Item4"]
texture_filter = 1
layout_mode = 0
offset_left = 646.794
offset_top = 2.42384
offset_right = 834.794
offset_bottom = 143.424
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "BUY
10"

[node name="Item5" type="ColorRect" parent="."]
offset_left = 9.0
offset_top = 701.0
offset_right = 848.0
offset_bottom = 845.0
scale = Vector2(0.966304, 0.825131)
color = Color(0.662745, 0.631373, 0.678431, 1)

[node name="Border" type="Sprite2D" parent="Item5"]
z_index = 1
texture_filter = 1
position = Vector2(77.6153, 71.5039)
scale = Vector2(9, 9)
texture = ExtResource("3_xjw1y")

[node name="OilPortrait" type="Sprite2D" parent="Item5/Border"]
texture_filter = 1
position = Vector2(-0.115, 0.135)
scale = Vector2(0.402, 0.471)
texture = ExtResource("8_igo68")

[node name="Label2" type="Label" parent="Item5"]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 166.614
offset_top = 16.967
offset_right = 342.614
offset_bottom = 81.967
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "Oil
Car  leaves   trai l  to    slow 
people ,  Appears at a chance"

[node name="Area2D" type="Area2D" parent="Item5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item5/Area2D"]
position = Vector2(419.64, 72.1098)
shape = SubResource("RectangleShape2D_k2pcd")

[node name="Button" type="Button" parent="Item5"]
texture_filter = 1
layout_mode = 0
offset_left = 644.725
offset_top = 1.21193
offset_right = 834.725
offset_bottom = 143.212
theme_override_fonts/font = ExtResource("2_e8ucp")
theme_override_font_sizes/font_size = 32
text = "BUY
10"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(4, 0)
stream = ExtResource("9_b75en")

[connection signal="pressed" from="Item1/Button" to="." method="_on_button_pressed_girl"]
[connection signal="pressed" from="Item2/Button" to="." method="_on_button_pressed_parrot"]
[connection signal="pressed" from="Item3/Button" to="." method="_on_button_pressed_stick"]
[connection signal="pressed" from="Item4/Button" to="." method="_on_button_pressed_truck"]
[connection signal="pressed" from="Item5/Button" to="." method="_on_button_pressed_oil"]
